chore: 优化分架构打包